--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,7 +5,7 @@
 
 main:
   - name: About
-    url: '#about'
+    url: 'about/'
     weight: 10
   - name: Posts
     url: '#posts'
@@ -16,12 +16,12 @@ main:
   # - name: Talks
   #   url: '#talks'
   #   weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+  # - name: Publications
+  #   url: '#featured'
+  #   weight: 50
   # - name: Courses
   #   url: courses/
   #   weight: 60
   - name: Contact
-    url: '#contact'
+    url: 'contact/'
     weight: 70
