--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://mgdesaix.netlify.app/"
+baseURL = "https://mgdesaix.rbind.io/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Matt DeSaix"
@@ -107,7 +107,7 @@ enableEmoji = true
   # Configure header 
   [[menu.header]]
     name = "About"
-    title = "About Blogophonic"
+    title = "About me"
     url = "/about/"
     weight = 1
   [[menu.header]]
