changed github link

--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ enableEmoji = true
   [[params.social]]
       icon      = "github" # icon name without the 'fa-'
       icon_pack = "fab"
-      url       = "https://github.com/mgdesaix/desaix-website"
+      url       = "https://github.com/mgdesaix"
   [[params.social]]
       icon      = "orcid" # icon name without the 'fa-'
       icon_pack = "ai"
